templates/aws-sigv4-proxy-admission-controller_template.yaml
---
# Source: aws-sigv4-proxy-admission-controller/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-aws-sigv4-proxy-admission-controller-webhook-service
  namespace: default
  labels:
    app: release-name-aws-sigv4-proxy-admission-controller
    helm.sh/chart: aws-sigv4-proxy-admission-controller-0.1.2
    app.kubernetes.io/version: "1"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: release-name-aws-sigv4-proxy-admission-controller
---
# Source: aws-sigv4-proxy-admission-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-aws-sigv4-proxy-admission-controller-webhook-deployment
  namespace: default
  labels:
    app: release-name-aws-sigv4-proxy-admission-controller
    helm.sh/chart: aws-sigv4-proxy-admission-controller-0.1.2
    app.kubernetes.io/version: "1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-aws-sigv4-proxy-admission-controller
  template:
    metadata:
      labels:
        app: release-name-aws-sigv4-proxy-admission-controller
    spec:
      serviceAccountName: release-name-aws-sigv4-proxy-admission-controller
      containers:
        - name: release-name-aws-sigv4-proxy-admission-controller
          image: "public.ecr.aws/aws-observability/aws-sigv4-proxy-admission-controller:1.0"
          imagePullPolicy: IfNotPresent
          args:
            - -tlsCertFile=/etc/webhook/certs/cert.pem
            - -tlsKeyFile=/etc/webhook/certs/key.pem
          ports:
            - containerPort: 443
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: release-name-aws-sigv4-proxy-admission-controller-webhook-certs
---
# Source: aws-sigv4-proxy-admission-controller/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-aws-sigv4-proxy-admission-controller-webhook-config
  labels:
    app: release-name-aws-sigv4-proxy-admission-controller
    helm.sh/chart: aws-sigv4-proxy-admission-controller-0.1.2
    app.kubernetes.io/version: "1"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: release-name-aws-sigv4-proxy-admission-controller.k8s.aws
    clientConfig:
      service:
        name: release-name-aws-sigv4-proxy-admission-controller-webhook-service
        namespace: default
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURUekNDQWplZ0F3SUJBZ0lRR0RDTld5Q0pQL1MzWXN3OXo5N1FtakFOQmdrcWhraUc5dzBCQVFzRkFEQXkKTVRBd0xnWURWUVFERXlkaGQzTXRjMmxuZGpRdGNISnZlSGt0WVdSdGFYTnphVzl1TFdOdmJuUnliMnhzWlhJdApZMkV3SGhjTk1qUXdOVEUwTWpNeU5UTTFXaGNOTXpRd05URXlNak15TlRNMVdqQXlNVEF3TGdZRFZRUURFeWRoCmQzTXRjMmxuZGpRdGNISnZlSGt0WVdSdGFYTnphVzl1TFdOdmJuUnliMnhzWlhJdFkyRXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ3JCYjBHZGVmZmpWSjBSSWtKUkV4bkNKMEJ4Qk50MXR2ZQpZWUMrWnJyVXZh [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["apps", ""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    admissionReviewVersions:
    - v1beta1
